# progress_assitant

./: .gitignore  .travis.yml  LICENSE  README.md  build.sh  deploy.sh  gen_thrift.makefile  gen_thrift.sh  idl.thrift  sonar-project.properties
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: codeql-analysis.yml  main.yml
bank_plugin/abc_bank/: CMakeLists.txt  config_page.cpp  config_page.h  config_page.ui  main.cpp
depend_docker/: Dockerfile  nginx_websocket_install.sh  ngrest_install.sh
depend_docker/thrift/: config.h
nginx_conf/: nginx.conf
pa_back/external_src/: Base64.h  CMakeLists.txt  cJSON.c  reader.hpp  writer.hpp
pa_back/gen_code/: company_management.cpp  company_management.h  idl_types.cpp  idl_types.h  open_api_management.cpp  open_api_management.h  stuff_info.cpp  stuff_info.h  stuff_plan_management.cpp  stuff_plan_management.h  user_management.cpp  user_management.h  vichele_management.cpp  vichele_management.h
pa_back/pa_automation/: CMakeLists.txt  main.cpp  pa_company_suite.h  pa_stuff_plan_suite.h  pa_test_suite.h  pa_user_suite.h
pa_back/pa_rest_node/: index.js  package-lock.json  package.json
pa_back/pa_rest_node/gen_code/: company_management.js  idl_types.js  open_api_management.js  stuff_info.js  stuff_plan_management.js  user_management.js  vichele_management.js
pa_back/pa_rpc/: CMakeLists.txt  company_management_imp.h  open_api_management_imp.h  pa_rpc_main.cpp  pa_rpc_util.cpp  pa_rpc_util.h  stuff_info_imp.h  stuff_plan_management_imp.h  user_management_imp.h  vichele_management_imp.h
pa_back/pa_util/: CMakeLists.txt  pa_advance.cpp  pa_advance.h  pa_data_base.cpp  pa_data_base.h  pa_status_rule.cpp  pa_utils.cpp  pa_utils.h  pa_zh_connection.cpp  pa_zh_connection.h  wechat_msg.cpp  wechat_msg.h
pa_back/sqlite_orm/: sqlite_orm.cpp  sqlite_orm.h  sqlite_orm_tree.h
pa_back/tcp_framework/: CMakeLists.txt  tdf_include.h  tdf_main.cpp
pa_conf/: data_config.json  nginx.conf
pa_daemon/: CMakeLists.txt  main.cpp  pa_api_proc.cpp  pa_api_proc.h
pa_front/: .env.prod  .env.test  .env.test_serve  README.md  babel.config.js  package-lock.json  package.json  vue.config.js
pa_front/public/: index.html
pa_front/public/gen_code/: company_management.js  idl_types.js  open_api_management.js  stuff_info.js  stuff_plan_management.js  user_management.js  vichele_management.js
pa_front/public/lib/: Int64.js  Int64Util.js  JSONInt64.js
pa_front/src/: App.vue  main.js
pa_front/src/api/: company.js  driver.js  plan.js  stuff.js  user.js
pa_front/src/components/: ContractCell.vue  DriverLicenseDialog.vue  DriverLicensesView.vue  ExportFile.vue  HistoryInput.vue  LicenseCollapse.vue  PaStep1.vue  PlanBrief.vue  PlanOperate.vue  ScaleGatePanel.vue  SecCheckCell.vue  SecCheckDiag.vue  StepDetail.vue  StuffInfoSubmit.vue  StuffTitle.vue  TicketBrief.vue  TicketContent.vue  TicketItem.vue  VehicleQueNode.vue  VicheleInPlan.vue  Welcome.vue
pa_front/src/components/PaStep/zhuochuang/chuchai/: CommentOnly.vue  jingli.vue  shenbao.vue  zhuguan.vue
pa_front/src/plugins/: axios.js  rpc_helper.js
pa_front/src/router/: index.js
pa_front/src/store/: index.js
pa_front/src/views/: Admin.vue  AppPanel.vue  Application.vue  BiddingForm.vue  BiddingList.vue  BindCompany.vue  BoundInfo.vue  BuyBrief.vue  BuyVehicleCount.vue  ClosePlan.vue  CompanyExtraVichele.vue  CompanyHome.vue  CompanyOrder.vue  Contract.vue  CreateTicket.vue  DeliverPlan.vue  DeviceStatus.vue  DriverRegister.vue  ExtraVichele.vue  Home.vue  Login.vue  Myself.vue  Order.vue  PlanConfirm.vue  PlanCopy.vue  PlanDetail.vue  PlanImport.vue  PlanUpdate.vue  PriLogin.vue  SecCheck.vue  SecCheckMobile.vue  SelfInfo.vue  Statistics.vue  StuffPlan.vue  SupplierInfo.vue  ThirdDev.vue  Ticket.vue  TicketDetail.vue  TicketExport.vue  VehicleQue.vue
pa_front/src/views/bidding/: BiddingForm.vue  BiddingInfo.vue  BiddingList.vue
pa_front/src/views/bidding/components/: BiddingCard.vue  BiddingStat.vue  BiddingStatus.vue
pa_front/src/views/pc/: CustomerInfo.vue
pa_front/src/views/pc/CustomerInfo/: exportButton.vue  index.vue
pa_lib/: CMakeLists.txt  pa.pb.cc  pa.pb.h  pa.proto  pa_api.cpp  pa_api.h  pa_database.cpp  pa_database.h
pa_lib/cli/: func_help.cpp  func_helper.h  main.cpp
pa_rest/: .gitignore  CMakeLists.txt
pa_rest/.ngrest/: name
pa_rest/pa_rest/: CMakeLists.txt
pa_rest/pa_rest/src/: pa_rest.cpp  pa_rest.h
pa_rpc/: CMakeLists.txt  company_management_imp.h  pa_data_base.cpp  pa_data_base.h  pa_rpc_main.cpp  pa_status_rule.cpp  pa_status_rule.h  pa_utils.cpp  pa_utils.h  stuff_info_imp.h  stuff_plan_management_imp.h  user_management_imp.h  wechat_msg.cpp  wechat_msg.h
pa_rpc/automation_test/: main.cpp  pa_plan_suite.h  pa_test_suite.h  pa_user_suite.h
pa_rpc/gen_code/: company_management.cpp  company_management.h  idl_types.cpp  idl_types.h  stuff_info.cpp  stuff_info.h  stuff_plan_management.cpp  stuff_plan_management.h  user_management.cpp  user_management.h
pa_script/: auto_reply.py  long_pic_make.sh  replace.py  send_mail.py  send_sms.py
pa_script/gen_code/idl/: __init__.py  company_management-remote  company_management.py  open_api_management-remote  open_api_management.py  stuff_info-remote  stuff_info.py  stuff_plan_management-remote  stuff_plan_management.py  ttypes.py  user_management-remote  user_management.py  vichele_management-remote  vichele_management.py
pa_tool/pa_api_cli/: pa_api_cli.js  package-lock.json  package.json
pa_tool/pa_api_cli/gen_code/: company_management.js  idl_types.js  open_api_management.js  stuff_info.js  stuff_plan_management.js  user_management.js  vichele_management.js
sqlite_orm/: CMakeLists.txt  sqlite_orm.cpp  sqlite_orm.h  sqlite_orm_tree.h  test.cpp
tcp_framework/: tdf_include.h  tdf_main.cpp
